welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: not found: value SetCouleurBrosse
      SetCouleurBrosse(T(i));
      ^